# spotter

./: .gitmodules  CMakeLists.txt  README.md  config.h  main.cpp
utils/: api.cpp  api.h  check.cpp  check.h  commands.cpp  commands.h  database.cpp  database.h  personal.cpp  personal.h  spotter.cpp  spotter.h  utils.cpp  utils.h
